--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="GroupManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ShapeProperties.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Automorph.h">
@@ -207,6 +210,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GroupManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ShapeProperties.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
