--- a/BodySlide.vcxproj
+++ b/BodySlide.vcxproj
@@ -123,6 +123,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="NifBlock.cpp" />
     <ClCompile Include="NifFile.cpp" />
+    <ClCompile Include="Object3d.cpp" />
     <ClCompile Include="ObjFile.cpp" />
     <ClCompile Include="OutfitProject.cpp" />
     <ClCompile Include="OutfitStudio.cpp" />
@@ -185,6 +186,9 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="BodySlide.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\BodyslideFrame.xrc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
