--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Object3d.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Automorph.h">
@@ -228,5 +231,10 @@
     <ResourceCompile Include="BodySlide.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\BodyslideFrame.xrc">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
