--- a/BodySlide.vcxproj
+++ b/BodySlide.vcxproj
@@ -135,6 +135,8 @@
     <ClCompile Include="SliderData.cpp" />
     <ClCompile Include="SliderGroup.cpp" />
     <ClCompile Include="SliderManager.cpp" />
+    <ClCompile Include="SliderPresets.cpp" />
+    <ClCompile Include="SliderSet.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -174,6 +176,8 @@
     <ClInclude Include="SliderData.h" />
     <ClInclude Include="SliderGroup.h" />
     <ClInclude Include="SliderManager.h" />
+    <ClInclude Include="SliderPresets.h" />
+    <ClInclude Include="SliderSet.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="tinyxml2.h" />
