Added MaterialFile (BGSM/BGEM) and loading diffuse texture from it

--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="FBXWrangler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MaterialFile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Automorph.h">
@@ -234,6 +237,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FBXWrangler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MaterialFile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
