--- a/BodySlide.vcxproj
+++ b/BodySlide.vcxproj
@@ -205,6 +205,7 @@
     <ClCompile Include="GLSurface.cpp" />
     <ClCompile Include="GroupManager.cpp" />
     <ClCompile Include="Log.cpp" />
+    <ClCompile Include="MaterialFile.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="NifBlock.cpp" />
     <ClCompile Include="NifFile.cpp" />
@@ -248,6 +249,7 @@
     <ClInclude Include="GroupManager.h" />
     <ClInclude Include="KDMatcher.h" />
     <ClInclude Include="Log.h" />
+    <ClInclude Include="MaterialFile.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="NifFile.h" />
     <ClInclude Include="Object3d.h" />
