New miniball algorithm bounding spheres of geometry and bones

--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="MaterialFile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Object3d.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Automorph.h">
