--- a/BodySlide.vcxproj
+++ b/BodySlide.vcxproj
@@ -209,6 +209,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="NifBlock.cpp" />
     <ClCompile Include="NifFile.cpp" />
+    <ClCompile Include="Object3d.cpp" />
     <ClCompile Include="ObjFile.cpp" />
     <ClCompile Include="OutfitProject.cpp" />
     <ClCompile Include="OutfitStudio.cpp" />
