--- a/BodySlide.vcxproj.filters
+++ b/BodySlide.vcxproj.filters
@@ -239,6 +239,9 @@
     <ClInclude Include="AABBTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NifBlock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="BodySlide.ico">
