--- a/BodySlide.vcxproj
+++ b/BodySlide.vcxproj
@@ -600,6 +600,7 @@
     <ClInclude Include="src\program\PresetSaveDialog.h" />
     <ClInclude Include="src\program\PreviewWindow.h" />
     <ClInclude Include="src\program\ShapeProperties.h" />
+    <ClInclude Include="src\render\GLExtensions.h" />
     <ClInclude Include="src\render\GLShader.h" />
     <ClInclude Include="src\render\GLSurface.h" />
     <ClInclude Include="src\ui\wxStateButton.h" />
@@ -642,6 +643,7 @@
     <ClCompile Include="src\program\PresetSaveDialog.cpp" />
     <ClCompile Include="src\program\PreviewWindow.cpp" />
     <ClCompile Include="src\program\ShapeProperties.cpp" />
+    <ClCompile Include="src\render\GLExtensions.cpp" />
     <ClCompile Include="src\render\GLShader.cpp" />
     <ClCompile Include="src\render\GLSurface.cpp" />
     <ClCompile Include="src\ui\wxStateButton.cpp" />
